@@ -61,7 +61,7 @@ class TickBufferTest {
 
         // then
         assertThat(result).hasSize(1);
-        assertThat(result.getFirst().bid()).isEqualByComparingTo(new BigDecimal("51000"));
+        assertThat(result.get(0).bid()).isEqualByComparingTo(new BigDecimal("51000"));
     }
 
     @Test
